--- a/src/app/products/features/product-list/product-list.component.html
+++ b/src/app/products/features/product-list/product-list.component.html
@@ -15,7 +15,8 @@
 
     <div class="flex justify-end my-6">
       <!-- dark:bg-blue-600 : si tu pc o el navegador esta en modo oscuro -->
-      <button type="button" class="text-white  hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-700 dark:hover:bg-green-700 focus:outline-none dark:focus:ring-blue-800">Cambiar Pagina</button>
+      <button type="button" (click)="changePage()"
+       class="text-white  hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-700 dark:hover:bg-green-700 focus:outline-none dark:focus:ring-blue-800">Cambiar Pagina</button>
 
     </div>
 
