--- a/src/app/products/ui/product-card/product-card.component.html
+++ b/src/app/products/ui/product-card/product-card.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+<div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-black dark:border-gray-700">
   <picture href="#">
 
     <!-- [src]="product().image" : desenvolsando usando la clase debe ser igual los metodos de clase modelo -->
