--- a/src/app/products/features/product-detail/product-detail.component.html
+++ b/src/app/products/features/product-detail/product-detail.component.html
@@ -2,16 +2,19 @@
   <div class="max-w-screen-xl px-4 mx-auto 2xl:px-0">
     <div class="lg:grid lg:grid-cols-2 lg:gap-8 xl:gap-16">
       <div class="shrink-0 max-w-md lg:max-w-lg mx-auto">
-        <img class="w-full dark:hidden" src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/imac-front.svg" alt="" />
-        <img class="w-full hidden dark:block" src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/imac-front-dark.svg" alt="" />
+
+
+        <img class="w-full" [src]="productDetailSatte.products()?.image" />
+
+
       </div>
 
       <div class="mt-6 sm:mt-8 lg:mt-0">
         <h1
           class="text-xl font-semibold text-gray-900 sm:text-2xl dark:text-white"
         >
-          Apple iMac 24" All-In-One Computer, Apple M1, 8GB RAM, 256GB SSD,
-          Mac OS, Pink
+        {{ productDetailSatte.products()?.title }}
+
         </h1>
         <div class="mt-4 sm:items-center sm:gap-4 sm:flex">
           <p
