--- a/src/app/products/ui/product-card/product-card.component.html
+++ b/src/app/products/ui/product-card/product-card.component.html
@@ -1,31 +1,36 @@
 
 
-<div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-black dark:border-gray-700">
-  <picture href="#">
+<!-- [routerLink]="['/product' : redirecciona a esa ruta -->
+<!-- product().id : se envia como parametro el id -->
+<a [routerLink]="['/product', product().id]">
+  <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-slate-800 dark:border-gray-700">
+    <picture href="#">
 
-    <!-- [src]="product().image" : desenvolsando usando la clase debe ser igual los metodos de clase modelo -->
-      <img class="rounded-t-lg h-60 w-full object-contain object-center" [src]="product().image" alt="" />
-  </picture>
-  <div class="p-5">
-      <a href="#">
-        <!-- line-clamp-1 : lo pone e una linea -->
-          <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white line-clamp-1">
-                <!-- [src]="product().image" : desenvolsando usando la clase debe ser igual los metodos de clase modelo -->
-            {{product().title}}
-          </h5>
-      </a>
-      <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 line-clamp-3">
-        {{product().description}}
-      </p>
-      <!-- <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-          Read more
+      <!-- [src]="product().image" : desenvolsando usando la clase debe ser igual los metodos de clase modelo -->
+        <img class="rounded-t-lg h-60 w-full object-contain object-center" [src]="product().image" alt="" />
+    </picture>
+    <div class="p-5">
+        <a href="#">
+          <!-- line-clamp-1 : lo pone e una linea -->
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white line-clamp-1">
+                  <!-- [src]="product().image" : desenvolsando usando la clase debe ser igual los metodos de clase modelo -->
+              {{product().title}}
+            </h5>
+        </a>
+        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 line-clamp-3">
+          {{product().description}}
+        </p>
+        <!-- <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            Read more
 
-           <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-          </svg>
-      </a> -->
+             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+            </svg>
+        </a> -->
+    </div>
   </div>
-</div>
+
+</a>
 
 
 <!--
