--- a/src/app/products/features/product-list/product-list.component.html
+++ b/src/app/products/features/product-list/product-list.component.html
@@ -34,7 +34,7 @@
   <div class="grid grid-cols-[repeat(4,300px)] gap-6">
 
     <!-- desenvolsando la data del controller -->
-    <!-- productService.state().products : el product-state.service.ts
+    <!-- productService.state().products : el product-state.service.ts , el products es la variable q tiene la data
       se agrega en el product-->
       <!-- track product: Esto sirve para que Angular pueda rastrear cada elemento en la lista .track product permite que Angular identifique cada producto único en la lista y solo actualice los elementos que cambian.-->
     @for(product of productService.state().products ;track product) {
