--- a/src/app/products/ui/product-card/product-card.component.html
+++ b/src/app/products/ui/product-card/product-card.component.html
@@ -9,24 +9,15 @@
       <!-- [src]="product().image" : desenvolsando usando la clase debe ser igual los metodos de clase modelo -->
         <img class="rounded-t-lg h-60 w-full object-contain object-center" [src]="product().image" alt="" />
     </picture>
-    <div class="p-5">
-        <a href="#">
-          <!-- line-clamp-1 : lo pone e una linea -->
-            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white line-clamp-1">
-                  <!-- [src]="product().image" : desenvolsando usando la clase debe ser igual los metodos de clase modelo -->
-              {{product().title}}
-            </h5>
-        </a>
-        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 line-clamp-3">
-          {{product().description}}
-        </p>
-        <!-- <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-            Read more
+    <div class="flex justify-end my-4">
+      <button
+      class="inline-flex items-center gap-2 px-3 py-2 text-sm font-medium text-center text-white bg-green-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-blue-800"
+      (click)="add($event)"
+    >
+    <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="currentColor"  class="icon icon-tabler icons-tabler-filled icon-tabler-shopping-cart"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 2a1 1 0 0 1 .993 .883l.007 .117v1.068l13.071 .935a1 1 0 0 1 .929 1.024l-.01 .114l-1 7a1 1 0 0 1 -.877 .853l-.113 .006h-12v2h10a3 3 0 1 1 -2.995 3.176l-.005 -.176l.005 -.176c.017 -.288 .074 -.564 .166 -.824h-5.342a3 3 0 1 1 -5.824 1.176l-.005 -.176l.005 -.176a3.002 3.002 0 0 1 1.995 -2.654v-12.17h-1a1 1 0 0 1 -.993 -.883l-.007 -.117a1 1 0 0 1 .883 -.993l.117 -.007h2zm0 16a1 1 0 1 0 0 2a1 1 0 0 0 0 -2zm11 0a1 1 0 1 0 0 2a1 1 0 0 0 0 -2z" /></svg>
 
-             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-            </svg>
-        </a> -->
+      Agregar al carrito
+    </button>
     </div>
   </div>
 
