--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -16,10 +16,18 @@
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border  rounded-lg  md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 ">
         <li>
-          <a routerLink="/productos" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-green-600" aria-current="page">Productos</a>
+          <!-- routerLinkActive : esta clase se asigna cuando este dentro de la ruta del routerlink -->
+          <!-- routerLinkActiveOptions : Asegura que la clase solo se aplique si la ruta actual coincide exactamente. -->
+          <a routerLink="/productos"
+          routerLinkActive="dark:text-green-600"
+          [routerLinkActiveOptions]="{exact:true}"
+          class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-green-600" aria-current="page">Productos</a>
         </li>
         <li>
-          <a routerLink="/cart" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-green-600 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Carrito</a>
+          <a routerLink="/cart"
+          routerLinkActive="dark:text-green-600"
+          [routerLinkActiveOptions]="{exact:true}"
+          class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-green-600 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Carrito</a>
         </li>
       </ul>
     </div>
