--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 
+<!-- COMPONENTE PADRE -->
 
 <div class="flex flex-col min-h-screen">
+  <!-- componente fijo -->
   <app-header />
   <main>
+    <!-- router de componentes -->
     <router-outlet></router-outlet>
   </main>
 </div>
