--- a/src/app/cart/ui/cart-item/cart-item.component.html
+++ b/src/app/cart/ui/cart-item/cart-item.component.html
@@ -1,8 +1,11 @@
 <div class="rounded-lg border border-gray-200 bg-white p-4 shadow-sm dark:border-gray-700 dark:bg-gray-800 md:p-6">
   <div class="space-y-4 md:flex md:items-center md:justify-between md:gap-6 md:space-y-0">
     <a href="#" class="shrink-0 md:order-1">
-      <img class="h-20 w-20 dark:hidden" src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/imac-front.svg" alt="imac image" />
-      <img class="hidden h-20 w-20 dark:block" src="https://flowbite.s3.amazonaws.com/blocks/e-commerce/imac-front-dark.svg" alt="imac image" />
+      <!-- [src]="productCartItem().product.image" : desenvolsando la data , de todo el objeto q tiene el product y quantity
+       solo quiero el product y de ahi su imagen-->
+       <!-- [src]: se pone asi pq es para contenido dinamico -->
+      <img class="h-20 w-20 " [src]="productCartItem().product.image" alt="imac image" />
+
     </a>
 
     <label for="counter-input" class="sr-only">Choose quantity:</label>
@@ -13,7 +16,10 @@
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h16" />
           </svg>
         </button>
-        <input type="text" id="counter-input" data-input-counter class="w-10 shrink-0 border-0 bg-transparent text-center text-sm font-medium text-gray-900 focus:outline-none focus:ring-0 dark:text-white" placeholder="" value="2" required />
+        <!-- [value]="productCartItem().quantity" : agregano de todo el objeto solo quremos el quantity -->
+        <input type="text" id="counter-input"
+        data-input-counter class="w-10 shrink-0 border-0 bg-transparent text-center text-sm font-medium text-gray-900 focus:outline-none focus:ring-0 dark:text-white" placeholder="" [value]="productCartItem().quantity" required disabled/>
+
         <button type="button" id="increment-button" data-input-counter-increment="counter-input" class="inline-flex h-5 w-5 shrink-0 items-center justify-center rounded-md border border-gray-300 bg-gray-100 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700">
           <svg class="h-2.5 w-2.5 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 18">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16" />
@@ -21,12 +27,19 @@
         </button>
       </div>
       <div class="text-end md:order-4 md:w-32">
-        <p class="text-base font-bold text-gray-900 dark:text-white">$1,499</p>
+        <p class="text-base font-bold text-gray-900 dark:text-white">
+          <!-- desenvolsando la data -->
+          <!-- currency : usando el pipe : el valor de ejemplo seria esto 22.30 : siempre 2 decimales al final y si no hay le agrega cero ademas le da el valor al entero mas cercano -->
+          {{ productCartItem().product.price | currency  }}
+        </p>
       </div>
     </div>
 
     <div class="w-full min-w-0 flex-1 space-y-4 md:order-2 md:max-w-md">
-      <a href="#" class="text-base font-medium text-gray-900 hover:underline dark:text-white">PC system All in One APPLE iMac (2023) mqrq3ro/a, Apple M3, 24" Retina 4.5K, 8GB, SSD 256GB, 10-core GPU, Keyboard layout INT</a>
+      <a href="#" class="text-base font-medium text-gray-900 hover:underline dark:text-white">
+        <!-- desenvolsando la data solo de products -->
+        {{productCartItem().product.title}}
+      </a>
 
       <div class="flex items-center gap-4">
         <button type="button" class="inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-900 hover:underline dark:text-gray-400 dark:hover:text-white">
@@ -36,11 +49,15 @@
           Add to Favorites
         </button>
 
-        <button type="button" class="inline-flex items-center text-sm font-medium text-red-600 hover:underline dark:text-red-500">
+        <!-- (click)="onRemove.emit(productCartItem().product.id)" : llamando al metodo emit y le envia de solo 1ojeto , selecciona el product y le envia su id  -->
+        <!-- onRemove : variable = en el controller -->
+        <button type="button" class="inline-flex items-center text-sm font-medium text-red-600 hover:underline dark:text-red-500"
+        (click)="onRemove.emit(productCartItem().product.id)"
+        >
           <svg class="me-1.5 h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6" />
           </svg>
-          Remove
+          Eliminar
         </button>
       </div>
     </div>
