--- a/src/app/products/ui/product-card/product-card.component.html
+++ b/src/app/products/ui/product-card/product-card.component.html
@@ -1,5 +1,7 @@
 
 
+<!-- COMPONENTE MUESTRA CADA CARD DE PRODUCTO -->
+
 <!-- [routerLink]="['/product' : redirecciona a esa ruta -->
 <!-- product().id : se envia como parametro el id -->
 <a [routerLink]="['/product', product().id]">
