--- a/src/app/products/features/product-detail/product-detail.component.html
+++ b/src/app/products/features/product-detail/product-detail.component.html
@@ -1,4 +1,8 @@
 
+
+<!-- COMPONENTE MUESTRA EL PRODUCT UNICIO O ELEGIDO EN LA PAGINA COMPLETA MEDIANTE EL ID -->
+
+
 <!-- si esta iniciando o no hay data -->
 @if (productDetailState.status() === "loading") {
   <div class="loading">Loading...</div>
@@ -12,6 +16,7 @@
           <!-- desenvolsando data -->
           <!-- product : es la variable q tiene la data -->
           <!-- image : valores iguales a tu clase modelo -->
+          <!-- productDetailState.product()? : erifica si el objeto retornado por .product() no es null o undefined antes de intentar acceder a la propiedad image.Si .product() devuelve un objeto con una propiedad image, esta propiedad será usada como el valor de src. Si devuelve null o undefined, Angular no intentará acceder a .image y no causará un error., osea basicamente es opcional -->
           <img
             class="w-full"
             [src]="productDetailState.product()?.image"
@@ -29,16 +34,18 @@
             <p
               class="text-2xl font-extrabold text-gray-900 sm:text-3xl dark:text-white"
             >
+            <!-- usando el pipe : agrega 2 decimales al final -->
               {{ productDetailState.product()?.price | currency }}
             </p>
           </div>
 
           <div class="mt-6 sm:gap-4 sm:items-center sm:flex sm:mt-8">
+            <!-- (click)="addToCart()" :metodo para agregar al carrito , el proudcto obtenido x el id de la url -->
             <button
               title=""
               class="text-white mt-4 sm:mt-0 bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 flex items-center justify-center"
               role="button"
-
+              (click)="addToCart()"
             >
               <svg
                 class="w-5 h-5 -ms-2 me-2"
